# HML3-Cpp-OneAPI-SYCL

./: .gitignore  CMakeLists.txt  DPCPPConsoleApplication1.sln  README.md  build-linux-sh  build-linux.sh
Common/: BaseManager.h  Common.h  Common.vcxproj  Common.vcxproj.filters  ComputeManager.h  DPData.h  HOMLData.h  LogManager.cpp  LogManager.h  Matrix.h  Matrix.inl  OneAPIManager.cpp  OneAPIManager.h  OneAPP.cpp  OneAPP.h
DPCPPConsoleApplication1/: BaseManager.h  ComputeManager.h  DPCPPConsoleApplication1.cpp  DPCPPConsoleApplication1.vcxproj  DPCPPConsoleApplication1.vcxproj.filters  LogManager.cpp  LogManager.h  OneAPIManager.cpp  OneAPIManager.h  OneDALManager.cpp  OneDALManager.h  Platform.cpp  Platform.h  RenderManager.cpp  RenderManager.h  Shared.cpp  Shared.h  UserInputManager.cpp  UserInputManager.h  Window.cpp  Window.h  WindowWin32.cpp  WindowXcb.cpp
Server/: Server.cpp  Server.vcxproj  Server.vcxproj.filters
src/: CMakeLists.txt
src/client/: CMakeLists.txt  Main.cpp  RenderManager.h
src/common/: BaseManager.cpp  CMakeLists.txt  ComputeManager.cpp  ComputeManager.h  DPData.h  LogManager.cpp  LogManager.h  Matrix.h  OneAPIManager.cpp  OneAPP.cpp  OneAPP.h  OneMath.h
src/server/: CMakeLists.txt  Main.cpp
